# Rick-Morty-py

./: Makefile  README.md  pyproject.toml  requirements.txt
rick_morty_py/: main.py
rick_morty_py/helpers/menu/: module.py
rick_morty_py/helpers/terminal/: module.py
rick_morty_py/rick_morty/: character.py  get_list.py  get_one.py  http_client.py
src/: alert.py  main.py  menu.py  terminal_table.py
src/helpers/: __init__.py
src/helpers/menu/: module.py
src/helpers/table/: module.py
src/rick_morty/: character.py  get_list.py  get_one.py  http_client.py
