[tool.poetry]
name = "rick_morty_py"
version = "0.1.0"
description = ""
authors = ["Adrian Sanchis Gallego <adrian@>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
types-requests = "^2.31.0.10"

[tool.poetry.scripts]
mypy = "^1.8.0"
start = "rick_morty_py.main:start"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
